- started rolling up those sleaves and digging into the instances core
- added ReaderWriterLockWrapper - Warning: Do not use ReaderWriterLockSlim or similar anymore - Too bug-prone!