@@ -1,3 +1,4 @@
+using System;
 using WCell.RealmServer.Instances;
 
 ///
@@ -9,6 +10,10 @@ namespace WCell.Addons.Default.Instances
 {
 	public class AhnQirajTemple : BaseInstance
 	{
+		protected override void PerformSave()
+		{
+			
+		}
 	}
 
 }
