@@ -1,2 +1,3 @@
-- started rolling up those sleaves and digging into the instances core
-- added ReaderWriterLockWrapper - Warning: Do not use ReaderWriterLockSlim or similar anymore - Too bug-prone!
+- added missing file
+- added Map.Save() and invoke it with World.Save() (used when shutdown, and in other cases)
+- added InstanceProgress and InstanceSettings to save and customize raids and dungeons
